--- a/content/Canvas0/Canvas0.html
+++ b/content/Canvas0/Canvas0.html
@@ -28,7 +28,7 @@
 		<a href="https://github.com/AngkasaMuhammad/Kumpulan-Content/raw/refs/heads/main/content/Canvas0/Canvas0.blend">
 			<button id="donloadblend">Download Canvas0.blend</button>
 		</a>
-		<button id="buka">Buka file</button><br/>
+		<button id="buka">Buka file float.bin</button><br/>
 		<canvas id="canv2d" width="800" height="530"></canvas>
 		<script src="Canvas0.js"></script>
 	</body>
